backport Serg's fix of FT interface (BUG#6523)